# coolbox-gui

./: .editorconfig  .eslintrc.json  .prettier.json  README.md  angular.json  package-lock.json  package.json  pnpm-lock.yaml  script.sh  tailwind.config.js
src/: index.html  main.ts  palette-helper.scss  palette.scss  styles.css  styles.scss
src-tauri/: Cargo.toml  build.rs  coolrc  justfile  tauri.conf.json
src-tauri/binaries/: coolbox-askpass-aarch64-apple-darwin  coolbox-askpass-x86_64-apple-darwin
src-tauri/coolbox-askpass/: Cargo.toml
src-tauri/coolbox-askpass/src/: main.rs
src-tauri/coolbox-cool/: Cargo.toml
src-tauri/coolbox-cool/assets/cools/brew/: curl.toml  flutter.toml  git.toml  wget.toml
src-tauri/coolbox-cool/assets/cools/cargo/: bat.toml  cargo-expand.toml  cargo-xcode.toml  exa.toml  flutter_rust_bridge_codegen.toml
src-tauri/coolbox-cool/assets/cools/env/: nvm.cool.yaml
src-tauri/coolbox-cool/assets/cools/flutter/: ffigen.toml
src-tauri/coolbox-cool/assets/cools/linux/apt/: llvm.cool.yaml
src-tauri/coolbox-cool/assets/cools/macos/: brew.cool.yaml  clt.cool.yaml
src-tauri/coolbox-cool/assets/cools/macos/brew/: curl.cool.yaml  flutter.cool.yaml  git.cool.yaml  llvm.cool.yaml  wget.cool.yaml
src-tauri/coolbox-cool/assets/cools/shell/: brew.toml  cargo.toml  command-line-tool.toml
src-tauri/coolbox-cool/assets/cools/universal/: mock.cool.yaml
src-tauri/coolbox-cool/assets/cools/universal/cargo/: bat.cool.yaml  cargo-expand.cool.yaml  cargo-xcode.cool.yaml  exa.cool.yaml  flutter_rust_bridge_codegen.cool.yaml
src-tauri/coolbox-cool/assets/cools/unix/: cargo.cool.yaml  nvm.cool.yaml
src-tauri/coolbox-cool/assets/cools2/: bat.cool.yaml  brew.cool.yaml  cargo-expand.cool.yaml  cargo-xcode.cool.yaml  cargo.cool.yaml  clt.cool.yaml  curl.cool.yaml  exa.cool.yaml  flutter.cool.yaml  flutter_rust_bridge_codegen.cool.yaml  git.cool.yaml  llvm.cool.yaml  nvm.cool.yaml  template.json  template.toml  template.yaml  wget.cool.yaml
src-tauri/coolbox-cool/src/: cool.rs  cool2.rs  cool_event.rs  cool_list.rs  env_manager.rs  env_util.rs  error.rs  event.rs  extension.rs  installer.rs  lib.rs  local_storage.rs  login_shell.rs  result.rs  shell.rs  state.rs  task_state.rs  tasks.rs  template.rs  trace.rs  unix_env_util.rs
src-tauri/coolbox-cool/src/cool/: dependency.rs  event.rs  formula.rs  list.rs  state.rs  template.rs  version.rs
src-tauri/coolbox-cool/src/env_manager/: shell_profile.rs  unix_env_util.rs  win_env_util.rs
src-tauri/coolbox-cool/src/env_util/: unix_env_util.rs
src-tauri/coolbox-cool/src/error/: env_error.rs  env_util_error.rs  executable_error.rs  inner_error.rs  installer_error.rs  shell_error.rs  storage_error.rs  task_error.rs
src-tauri/coolbox-cool/src/installer/: apt.rs  brew.rs  cargo.rs  dnf.rs  rpm.rs  winget.rs  yum.rs
src-tauri/coolbox-cool/src/shell/: bash.rs  cmd.rs  linux_sudo.rs  macos_sudo.rs  sh.rs  zsh.rs
src-tauri/coolbox-cool/src/tasks/: check_task.rs  command_task.rs  compress_task.rs  copy_task.rs  decompress_task.rs  delete_task.rs  download_task.rs  env_task.rs  exists_task.rs  git_task.rs  install_task.rs  move_task.rs  uninstall_task.rs  which_task.rs
src-tauri/coolbox-cool/src/template/: cool.rs  dependency.rs  formula.rs  installer.rs  shell.rs  task.rs  version.rs
src-tauri/coolbox-grpc/: Cargo.toml
src-tauri/coolbox-grpc/proto/: coolbox.proto
src-tauri/coolbox-grpc/src/: coolbox_proto.rs  lib.rs
src-tauri/coolbox-macros/: Cargo.toml
src-tauri/coolbox-macros/src/: lib.rs  state.rs  task.rs
src-tauri/icons/: icon.icns
src-tauri/schemas/: cool.json  cool.yaml
src-tauri/src/: api.rs  cool_data.rs  cool_list_api.rs  error.rs  event.rs  main.rs  server.rs  task_data.rs
src/app/: app.component.css  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.config.ts  app.module.ts  password-dialog.component.ts
src/app/app-info/: app-info.component.html  app-info.component.spec.ts  app-info.component.ts
src/app/cool-card/: cool-card.component.html  cool-card.component.scss  cool-card.component.spec.ts  cool-card.component.ts  prompt-dialog.html
src/app/cool-list/: cool-list.component.html  cool-list.component.scss  cool-list.component.spec.ts  cool-list.component.ts
src/app/info/: info.component.html  info.component.scss  info.component.spec.ts  info.component.ts
src/app/model/: cool.ts  event.ts  models.ts  task.ts
src/app/service/: askpass.service.ts  cool.service.ts
src/assets/i18n/: en-US.json  zh-CN.json  zh.json
