[workspace]
resolver = "2"
members = [
    "coolbox-cool",
    "coolbox-macros",
    "coolbox-askpass",
    "coolbox-grpc",
]

[workspace.package]
version = "0.1.1"
authors = ["BppleMan"]
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/BppleMan/coolbox"

[package]
name = "CoolBox"
description = "A tool box for your terminal."
default-run = "CoolBox"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true

[workspace.dependencies]
color-eyre = "0.6.2"
log = "0.4.20"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
reqwest = { version = "0.11.20", features = ["stream", "blocking"] }
toml = "0.7.6"
tar = "0.4.40"
flate2 = "1.0.27"
zip = "0.6.6"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.27"
rayon = "1.7.0"
tempfile = "3.7.1"
lazy_static = "1.4.0"
once_cell = "1.18.0"
crossbeam = "0.8.2"
pretty_assertions = "1.4.0"
fs_extra = "1.3.0"
thiserror = "1.0.47"
anyhow = "1.0.75"
walkdir = "2.4.0"
users = "0.11.0"
copypasta = "0.8.2"
tera = { version = "1.19.0", features = ["builtins"] }
git2 = { version = "0.18.1", features = ["vendored-libgit2", "vendored-openssl"] }
proxyconfig = "0.1.1"
which = "5.0.0"
include_dir = { version = "0.7.3", features = ["glob"] }
dashmap = { version = "5.5.3", features = ["serde", "rayon", "inline", "arbitrary"] }
tokio = { version = "1.33.0", features = ["full"] }
futures = "0.3.28"
tonic = "0.10.2"
prost = "0.12.1"
clap = { version = "4.4.6", features = ["derive"] }
schemars = "0.8.15"
directories = "5.0.1"
glob = "0.3.1"
regex = "1.9.4"
winreg = "0.51.0"
bitflags = "2.4.0"
notify = { version = "6.1.1", features = ["serde"] }
notify-debouncer-full = "0.3.1"

[dependencies]
cool = { path = "coolbox-cool" }
coolbox-grpc = { path = "coolbox-grpc" }

tauri = { version = "1.5.2", features = [] }

color-eyre.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
dashmap.workspace = true
rayon.workspace = true
thiserror.workspace = true
tonic.workspace = true
prost.workspace = true
tokio.workspace = true
once_cell.workspace = true
crossbeam.workspace = true

[build-dependencies]
cool = { path = "coolbox-cool" }
tauri-build = { version = "1.5.0", features = [] }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
